Updated to Java 11 and changed new Long to Long.valueOf. Small bug in IMVLong changed to get primary ID properly.